# check_website_status_code_and_server

./: Cargo.toml  README.md  ip.txt  ips-v4.txt  is_cloudflare.txt  output.csv
.fleet/: run.json
src/: main.rs
src/utils/: common.rs  data.rs  error.rs  http_request.rs  locations.rs  mod.rs
test/: read_json.rs
