[package]
name = "check_website_status_code_and_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.21"
tokio = { version = "1", features = ["full"] }
ipnetwork = "0.20.0"
async-std = "1.10"
futures = "0.3.28"
csv = "1.3.0"