[package]
name = "check_website_status_code_and_server"
version = "0.1.0"
edition = "2021"
rustc-version = "1.75.0" # 测试时所用的rust版本

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.21"
ipnetwork = "0.20.0"
csv = "1.3.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
rand = "0.8.5"
url = "2.5.0"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]