[package]
name = "check_website_status_code_and_server"
version = "0.1.0"
edition = "2021"

[source.crates-io]
replace-with = 'ustc'

# 中国科学技术大学
[source.ustc]
registry = "sparse+https://mirrors.ustc.edu.cn/crates.io-index/"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
ipnetwork = "0.20.0"
csv = "1.3.0"
chrono = "0.4.38"
rand = "0.8.5"
url = "2.5.2"
ipnet = "2.9.0"
futures = "0.3.30"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# [[bin]]
# name = "app1"
# path = "test/read_json.rs"
